[project]
name = "map-matching-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "fastparquet>=2024.11.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mmlib",
    "osmnx>=2.0.7",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "ruff>=0.14.9",
]

[tool.uv.sources]
mmlib = { git = "https://github.com/JoseEdSouza/mmlib.git", rev = "mm-demo" }
